crates/ink/tests/ui/contract/fail/constructor-payable-invalid-2.stderr
error: unknown ink! attribute argument (name = value)
 --> tests/ui/contract/fail/constructor-payable-invalid-2.rs:7:28
  |
7 |         #[ink(constructor, payable = false)]
  |                            ^^^^^^^^^^^^^^^
